[gd_scene load_steps=14 format=3 uid="uid://bbmf76x11s3gy"]

[ext_resource type="Script" uid="uid://bdkjbpg0f6103" path="res://Scripts/Enemies/Enemy_Bolt.gd" id="1_64p1g"]
[ext_resource type="Shader" uid="uid://d1rhew4ybwfr5" path="res://Shaders/Shader.gdshader" id="2_64p1g"]
[ext_resource type="Texture2D" uid="uid://bk00l5gxwyfg3" path="res://Art/Enemy_Bolt.png" id="2_jk4gd"]

[sub_resource type="CircleShape2D" id="CircleShape2D_64p1g"]
radius = 21.023796

[sub_resource type="ShaderMaterial" id="ShaderMaterial_c3v75"]
resource_local_to_scene = true
shader = ExtResource("2_64p1g")
shader_parameter/colour = Color(0, 1, 1, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_fpjh0"]
atlas = ExtResource("2_jk4gd")
region = Rect2(0, 0, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_64p1g"]
atlas = ExtResource("2_jk4gd")
region = Rect2(800, 0, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_c3v75"]
atlas = ExtResource("2_jk4gd")
region = Rect2(1600, 0, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_bnatq"]
atlas = ExtResource("2_jk4gd")
region = Rect2(2400, 0, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_iyblw"]
atlas = ExtResource("2_jk4gd")
region = Rect2(3200, 0, 800, 800)

[sub_resource type="SpriteFrames" id="SpriteFrames_xaqjv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fpjh0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_64p1g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c3v75")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bnatq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iyblw")
}],
"loop": true,
"name": &"Move",
"speed": 6.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_idtok"]
radius = 25.019993

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_64p1g"]
radius = 7.0
height = 56.0

[node name="EnemyBolt" type="CharacterBody2D"]
collision_layer = 32
collision_mask = 31
script = ExtResource("1_64p1g")

[node name="CharacterBody" type="CollisionShape2D" parent="."]
position = Vector2(-1, 8)
shape = SubResource("CircleShape2D_64p1g")

[node name="BaseSprite" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_c3v75")
position = Vector2(-1.9073486e-06, -1.9073486e-06)
scale = Vector2(0.08, 0.08)
sprite_frames = SubResource("SpriteFrames_xaqjv")
animation = &"Move"

[node name="Killbox" type="Area2D" parent="."]

[node name="Area" type="CollisionShape2D" parent="Killbox"]
position = Vector2(-1, 5)
shape = SubResource("CircleShape2D_idtok")

[node name="BounceArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BounceArea"]
position = Vector2(-3, -17)
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_64p1g")

[node name="RayCastDown" type="RayCast2D" parent="."]
position = Vector2(-19, 1)
collision_mask = 31

[node name="RayCastWall" type="RayCast2D" parent="."]
rotation = 1.5707964
target_position = Vector2(1.4861872e-06, 34)
collision_mask = 33

[node name="TurnCD" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="body_entered" from="Killbox" to="." method="_on_area_2d_body_entered"]
[connection signal="body_shape_entered" from="BounceArea" to="." method="_on_bounce_area_body_shape_entered"]
